@@ -1,5 +1,8 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2002-11-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* include/log4cpp/AbortAppender.hh, src/AbortAppender.cpp: added.
+	
 2002-10-29 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* Release as 0.3.4b
 	
